<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="center"
		>
	<EditText
			android:id="@+id/calcOutput"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:cursorVisible="true"
			android:textSize="40dp"
			android:textIsSelectable="true"
			android:gravity="right"
			android:inputType="textNoSuggestions"
			android:text="@string/calc_output_value"
			/>

	<GridLayout android:id="@+id/buttonGrid"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:columnCount="4"
	            android:orientation="horizontal">

		<Button android:id="@+id/button7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_7"
				/>
		<Button android:id="@+id/button8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_8"
				/>
		<Button android:id="@+id/button9"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_9"
				/>
		<Button android:id="@+id/button_operator_divide"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_operator_divide"
				/>
		<Button android:id="@+id/button4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_4"
				/>
		<Button android:id="@+id/button5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_5"
				/>
		<Button android:id="@+id/button6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_6"
				/>
		<Button android:id="@+id/button_operator_multiply"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_operator_multiply"
				/>
		<Button android:id="@+id/button1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_1"
				/>
		<Button android:id="@+id/button2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_2"
				/>
		<Button android:id="@+id/button3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_3"
				/>
		<Button android:id="@+id/button_operator_subtract"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_operator_subtract"
				/>
		<Button android:id="@+id/button0"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_0"
				/>
		<Button android:id="@+id/button_decimal_point"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_decimal_point"
				/>
		<Button android:id="@+id/button_special_function"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_special_function"
				/>
		<Button android:id="@+id/button_operator_add"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_rowSpan="2"
		        android:layout_gravity="fill"
		        android:layout_margin="5dp"
		        android:padding="20dp"
                android:state_selected="true"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_operator_add"
				/>
		<Button android:id="@+id/button_clear"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/blue_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_clear"
				/>
		<Button android:id="@+id/button_operator_equals"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_columnSpan="2"
		        android:layout_gravity="fill"
		        android:layout_margin="5dp"
		        android:padding="20dp"
		        android:background="@color/orange_button_bg"
		        android:textColor="@color/blue_button_text"
		        android:text="@string/calc_keypad_operator_equals"
				/>

	</GridLayout>

</LinearLayout>


